@@ -26,91 +26,91 @@ begincmap
 /CMapName /TTX+0 def
 /CMapType 2 def
 1 begincodespacerange
-<0000><FFFF>
+<00><FF>
 endcodespacerange
 2 beginbfchar
-<0005><0022>
-<005e><00660069>
+<05><22>
+<5e><6669>
 endbfchar
 79 beginbfrange
-<0003><0003><0020>
-<0004><0004><0021>
-<0009><0009><0026>
-<000a><000a><0027>
-<000b><000b><0028>
-<000c><000c><0029>
-<000e><000e><002b>
-<000f><000f><002c>
-<0010><0010><002d>
-<0011><0011><002e>
-<0012><0012><002f>
-<0013><0013><0030>
-<0014><0014><0031>
-<0015><0015><0032>
-<0016><0016><0033>
-<0017><0017><0034>
-<0018><0018><0035>
-<0019><0019><0036>
-<001a><001a><0037>
-<001b><001b><0038>
-<001c><001c><0039>
-<001d><001d><003a>
-<001e><001e><003b>
-<0024><0024><0041>
-<0025><0025><0042>
-<0026><0026><0043>
-<0027><0027><0044>
-<0028><0028><0045>
-<0029><0029><0046>
-<002a><002a><0047>
-<002b><002b><0048>
-<002c><002c><0049>
-<002d><002d><004a>
-<002e><002e><004b>
-<002f><002f><004c>
-<0030><0030><004d>
-<0031><0031><004e>
-<0032><0032><004f>
-<0033><0033><0050>
-<0034><0034><0051>
-<0035><0035><0052>
-<0036><0036><0053>
-<0037><0037><0054>
-<0038><0038><0055>
-<0039><0039><0056>
-<003a><003a><0057>
-<003b><003b><0058>
-<003c><003c><0059>
-<003d><003d><005a>
-<003f><003f><005c>
-<0041><0041><005e>
-<0042><0042><005f>
-<0044><0044><0061>
-<0045><0045><0062>
-<0046><0046><0063>
-<0047><0047><0064>
-<0048><0048><0065>
-<0049><0049><0066>
-<004a><004a><0067>
-<004b><004b><0068>
-<004c><004c><0069>
-<004d><004d><006a>
-<004e><004e><006b>
-<004f><004f><006c>
-<0050><0050><006d>
-<0051><0051><006e>
-<0052><0052><006f>
-<0053><0053><0070>
-<0054><0054><0071>
-<0055><0055><0072>
-<0056><0056><0073>
-<0057><0057><0074>
-<0058><0058><0075>
-<0059><0059><0076>
-<005a><005a><0077>
-<005b><005b><0078>
-<005c><005c><0079>
-<005d><005d><007a>
+<03><03><20>
+<04><04><21>
+<09><09><26>
+<0a><0a><27>
+<0b><0b><28>
+<0c><0c><29>
+<0e><0e><2b>
+<0f><0f><2c>
+<10><10><2d>
+<11><11><2e>
+<12><12><2f>
+<13><13><30>
+<14><14><31>
+<15><15><32>
+<16><16><33>
+<17><17><34>
+<18><18><35>
+<19><19><36>
+<1a><1a><37>
+<1b><1b><38>
+<1c><1c><39>
+<1d><1d><3a>
+<1e><1e><3b>
+<24><24><41>
+<25><25><42>
+<26><26><43>
+<27><27><44>
+<28><28><45>
+<29><29><46>
+<2a><2a><47>
+<2b><2b><48>
+<2c><2c><49>
+<2d><2d><4a>
+<2e><2e><4b>
+<2f><2f><4c>
+<30><30><4d>
+<31><31><4e>
+<32><32><4f>
+<33><33><50>
+<34><34><51>
+<35><35><52>
+<36><36><53>
+<37><37><54>
+<38><38><55>
+<39><39><56>
+<3a><3a><57>
+<3b><3b><58>
+<3c><3c><59>
+<3d><3d><5a>
+<3f><3f><5c>
+<41><41><5e>
+<42><42><5f>
+<44><44><61>
+<45><45><62>
+<46><46><63>
+<47><47><64>
+<48><48><65>
+<49><49><66>
+<4a><4a><67>
+<4b><4b><68>
+<4c><4c><69>
+<4d><4d><6a>
+<4e><4e><6b>
+<4f><4f><6c>
+<50><50><6d>
+<51><51><6e>
+<52><52><6f>
+<53><53><70>
+<54><54><71>
+<55><55><72>
+<56><56><73>
+<57><57><74>
+<58><58><75>
+<59><59><76>
+<5a><5a><77>
+<5b><5b><78>
+<5c><5c><79>
+<5d><5d><7a>
 endbfrange
 endcmap
 CMapName currentdict /CMap defineresource pop
@@ -129,9 +129,11 @@ my $cmap = $ind-obj.object;
 
 my $cmap-obj = PDF::Font::Loader::Enc::CMap.new: :$cmap, :$face;
 
+warn $cmap-obj.encode("ABC").perl;
+
 is-deeply $cmap-obj.decode("\x5\xF"), Buf[uint32].new(0x22, 0x2c), "decode";
 is $cmap-obj.decode("\x24\x25\x26", :str), 'ABC', "decode:str";
-is-deeply $cmap-obj.decode("\x5e"), Buf[uint32].new(64257), "decode ligature";
+is-deeply $cmap-obj.decode("\x5e"), Buf[uint32].new(0x6669), "decode ligature";
 $cmap-obj.differences = [0x42, 'C'];
 is $cmap-obj.decode("\x24\x25\x42", :str), 'ABC', "decode differences";
 done-testing;
